--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,11 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            form_login:
+                login_path: security.login
+                check_path: security.login
+            logout:
+                 path: security.logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
