--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.13",
+        "ckeditor4": "^4.20.2",
         "postcss-loader": "^7.0.2"
     }
 }
