--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,6 +5,6 @@ vich_uploader:
 
     mappings:
        recipe_images:
-           uri_prefix: /images/recette
-           upload_destination: '%kernel.project_dir%/public/images/recette'
+           uri_prefix: /images/recipe
+           upload_destination: '%kernel.project_dir%/public/images/recipe'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
