--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
+    app.path.recipe_images: /uploads/images/recipe
 services:
     # default configuration for services in *this* file
     _defaults:
