--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=c38becffd238d5685b3f259ae426aa69
 ###< symfony/framework-bundle ###
 
