--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,7 @@ twig:
 when@test:
     twig:
         strict_variables: true
+    twig.extension.text:
+      class: Twig_Extensions_Extension_Text
+      tags:
+          - { name: twig.extension }
