--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,6 +5,17 @@ vich_uploader:
 
     mappings:
        recipe_images:
-           uri_prefix: /images/recipe
-           upload_destination: '%kernel.project_dir%/public/images/recipe'
+           uri_prefix: /uploads
+           upload_destination: '%kernel.project_dir%/public/uploads'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+# vich_uploader:
+#     db_driver: orm
+#     metadata: 
+#         type: attribute
+
+#     mappings:
+#        recipe_images:
+#            uri_prefix: /images/recipe
+#            upload_destination: '%kernel.project_dir%/public/images/recipe'
+#            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
